--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
