--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.3.1",
     "handsontable": "^15.0.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
@@ -29,8 +30,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
+    "react-tooltip": "^5.28.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
