--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "handsontable": "^15.0.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-chartjs-2": "^5.3.0",
